# pdf_rag_qa

./: pyproject.toml
src/: main.py  output.txt
src/pdf_processing/: chunker.py  langchain.py  parser.py
src/vector_store/: index.faiss  index.pkl
