[project]
name = "pdf-rag-qa"
version = "0.1.0"
description = ""
authors = [
    {name = "hari-testpress",email = "hari@testpress.in"}
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
marker-pdf = {extras = ["full"], version = "^1.7.1"}

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
